--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "proyecto-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "test2.js",
+  "main": "test3.js",
   "scripts": {
+    "start": "nodemon test3.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/bottagerman/Proyecto-Backend/issues"
   },
-  "homepage": "https://github.com/bottagerman/Proyecto-Backend#readme"
+  "homepage": "https://github.com/bottagerman/Proyecto-Backend#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
+    "react-scripts": "^5.0.1"
+  }
 }
